Fixed info section img alignment and quote section

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
 body {
     font-family: Roboto, sans-serif;
     margin: 0;
-    overflow: hidden;
     color: #1f2937;
     display: flex;
     flex-direction: column;
@@ -91,18 +90,60 @@ button {
 .info {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
+    padding: 32px;
 }
 
 .info .container {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 24px;
+}
+
+.illust {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    max-width: 220px;
+}
+
+
+.illust img {
+    border-radius: 12px;
+    border-color: #3882f6;
+    border-style: solid;
+    border-width: 4px;
+    object-fit: cover;
+    height: 100%;
+    width: 220px;
 }
 
 .quote {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    padding: 100px 15%;
+}
+
+.quote h1 {
     font-size: 36px;
     font-style: italic; 
     font-weight: lighter;
+    padding: 0;
+}
+
+.quote p {
+    font-weight: bold;
+}
+
+.calltoaction {
+    display: flex;
+    justify-content: center;
+    margin: 100px;
 }
 
 .footer {
